--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,4 @@
+new-session
 
 # reload config
 bind r source-file ~/.tmux.conf
@@ -15,12 +16,13 @@ set -g visual-activity on
 # vim mode
 setw -g mode-keys vi
 
+# Copy and pasting
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy 'y' copy-selection
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-selection
 
 unbind %
 bind | split-window -h
@@ -35,4 +37,6 @@ set -g mouse-select-window off
 # speed up Esc
 set -s escape-time 0
 
+# set scrollback history to 10000 (10k)
+set -g history-limit 10000
 
