change tmux prefix-key to C-space

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,3 +40,6 @@ set -s escape-time 0
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
 
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
