--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,12 +17,24 @@ set -g visual-activity on
 setw -g mode-keys vi
 
 # Copy and pasting
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# -- copy mode -----------------------------------------------------------------
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-selection
+bind Enter copy-mode # enter copy mode
+bind b list-buffers  # list paster buffers
+bind p paste-buffer  # paste from the top pate buffer
+bind P choose-buffer # choose which buffer to paste from
+
+# the following vi-copy bindings match my vim settings
+#   see https://github.com/gpakosz/.vim.git
+bind -t vi-copy v begin-selection
+bind -t vi-copy C-v rectangle-toggle
+bind -t vi-copy y copy-selection
+bind -t vi-copy Escape cancel
+bind -t vi-copy H start-of-line
+bind -t vi-copy L end-of-line
+
+# see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+if 'which -s reattach-to-user-namespace' 'set -g default-command "tmux rename-window initializing; tmux set -w automatic-rename; reattach-to-user-namespace $SHELL -l"'
 
 unbind %
 bind | split-window -h
@@ -43,3 +55,8 @@ set -g history-limit 10000
 set -g prefix C-space
 unbind-key C-b
 bind-key C-space send-prefix
+
+# local changes
+set -g status-bg yellow
+
+
