highlight current win and display panel id

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,4 +59,8 @@ bind-key C-space send-prefix
 # local changes
 set -g status-bg yellow
 
+# Display current panel number to the left of the status bar
+set-option -g status-left '#P'
 
+# highlight active window
+set -w -g window-status-current-bg cyan
