add quick switch for last win, and / for vsplit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,8 @@ if 'which -s reattach-to-user-namespace' 'set -g default-command "tmux rename-wi
 
 unbind %
 bind | split-window -h
-bind "-" split-window -v
+bind \ split-window -h 
+bind - split-window -v
 
 # Mouse support
 setw -g mode-mouse on
@@ -55,6 +56,9 @@ set -g history-limit 10000
 set -g prefix C-space
 unbind-key C-b
 bind-key C-space send-prefix
+
+# fast toggle (normally prefix-l)
+bind ^space last-window
 
 # local changes
 set -g status-bg yellow
