update tmux for new mouse mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,10 +42,7 @@ bind \ split-window -h
 bind - split-window -v
 
 # Mouse support
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window off
+setw -g mouse on
 
 # speed up Esc
 set -s escape-time 0
